<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.wxveri.MainActivity" >

    <item
        android:id="@+id/action_vertical_listview"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_vertical"/>
    <item
        android:id="@+id/action_horizontal_listview"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_horizontal"/>
    <item
        android:id="@+id/action_grid_view"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/action_grid"/>
    <item
        android:id="@+id/action_stagger_list_view"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/action_stagger"/>
    <item
        android:id="@+id/action_add_item"
        android:orderInCategory="104"
        android:showAsAction="always"
        android:title="@string/action_add"/>
    <item
        android:id="@+id/action_remove_item"
        android:orderInCategory="105"
        android:showAsAction="always"
        android:title="@string/action_remove"/>
    <item
        android:id="@+id/action_shot_screen"
        android:orderInCategory="106"
        android:showAsAction="always"
        android:title="@string/action_shot_screen"/>

</menu>
